# --------------------------------------------------------------------------------------
# Copyright (c) 2021, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------

[project]
name = "kiwisolver"
description = "A fast implementation of the Cassowary constraint solver"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "The Nucleic Development Team", email = "sccolbert@gmail.com"}
]
maintainers = [
  {name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.urls]
homepage = "https://github.com/nucleic/kiwi"
documentation = "https://kiwisolver.readthedocs.io/en/latest/"
repository = "https://github.com/nucleic/kiwi"
changelog = "https://github.com/nucleic/kiwi/blob/main/releasenotes.rst"


[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.3", "cppy>=1.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "py/src/version.h"
write_to_template = """
/* ----------------------------------------------------------------------------
| Copyright (c) 2013-2021, Nucleic Development Team.
|
| Distributed under the terms of the Modified BSD License.
|
| The full license is in the file LICENSE, distributed with this software.
| ---------------------------------------------------------------------------*/
// This file is auto-generated by setuptools-scm do NOT edit it.

#pragma once

#define PY_KIWI_VERSION "{version}"

"""

[tool.black]
line-length = 88  # Enforce the default value

[tool.pytest.ini_options]
minversion = "6.0"

[tool.mypy]
follow_imports = "normal"
strict_optional = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "kiwisolver"
